test.yaml
kind: Pod
apiVersion: v1
metadata:
  name: test-app
  labels:
    app: test
spec:
  containers:
    - name: tets-app
      image: hashicorp/http-echo
      args:
        - "-text=test"

---

kind: Service
apiVersion: v1
metadata:
  name: test-service
spec:
  selector:
    app: test
  ports:
    - port: 5678 # Default port for image
